2007-12-31  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (SlaveFileUploadCommand.start):
	rewrite the main loop to avoid tail recursion, since Deferreds
	don't optimize those out. Without this, at the end of the transfer
	we'd hit a stack depth of about two or three frames per block
	transferred, and for large transfers this would run into a "stack
	depth exceeded" error. Closes #106.
	(SlaveFileDownloadCommand.start): same, for downloads.
	* buildbot/test/test_transfer.py (Upload.testLotsOfBlocks): test it
	(Download.testLotsOfBlocks): same

2007-12-22  Brian Warner  <warner@lothar.com>

	* buildbot/steps/shell.py (TreeSize): This never worked properly.
	Fix it. Also, stash the tree size in a build property named
	'tree-size-kb'. Note that this records size in KiB (1024 bytes),
	not KB (1000 bytes), because that's what du will give us. This
	closes #47.
	* docs/buildbot.texinfo (TreeSize): document it
	* buildbot/test/test_steps.py (TreeSize.testTreeSize): test it

	* buildbot/steps/shell.py (WarningCountingShellCommand): utility
	subclass which uses a regular expression to count warning messages
	in the output. This also puts warning messages in a new 'warnings'
	logfile, sets the 'warnings-count' build property with the total
	count, and marks the step results as WARNINGS if there are any
	warnings. Thanks to Roch Gadsdon (rochg) for the patch. Closes
	#74.
	(Compile): derive from WarningCountingShellCommand
	(Test): same
	* docs/buildbot.texinfo (Compile): document it
	* buildbot/test/test_steps.py (Warnings): test it

	* buildbot/slave/commands.py (ShellCommand._chunkForSend): don't
	send more than 128kB of stdout/stderr/logfile text in a single PB
	string, since PB has a hardwired limit of 640kB. This should fix
	crashes that occur when the test process generates output very
	very quickly. Patch by chops@demiurgestudios.com, thanks! I
	haven't been able to reproduce this locally, but the potential bug
	is clear. This should close #129.
